# flask-notes-app

./: .dockerignore  .env.sample  .flake8  .flaskenv  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  debug_locale.py  dev-notes.md  docker-compose.yaml  init-db.sql  messages.pot  notes-cli.py  nt  pyproject.toml  security-notes.md
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 8cba74311fa6_add_password_column_to_user.py  af814f7b55d0_add_preferred_language_to_user_table.py  ce8973086d91_add_last_logout_at_to_user.py  dbd5124873bf_initial_migration.py  f97f29921d53_add_category.py
reflections/: 2025-10-16-format-error-message.md  2025-10-20-authentication-login.md  2025-10-20-register.md  2025-10-24-invalidate-token.md  2025-10-25-add-tests.md  2025-10-25-update-password.md  2025-10-28-A01-reflection.md  2025-11-08-owasp-02.md  2025-11-16-docker-compose.md  2025-12-25-deploy-to-render.md  example.md
reflections/ADR/: ADR001-user-preferred-language.md  ADR002-setup-proxy-on-cloudfront.md
src/: __init__.py  extensions.py  models.py  models_registry.py  schemas.py
src/categories/: __init__.py  models.py  schemas.py  views.py
src/models/: categories.py  notes.py  users.py
src/notes/: __init__.py  models.py  schemas.py  views.py
src/schemas/: auth.py  categories.py  notes.py  users.py
src/users/: models.py
src/views/: auth.py  categories.py  notes.py  users.py  utils.py
tests/: conftest.py  test_auth.py  test_notes.py  test_translation.py  test_users.py
(+1 files in other folders)
